--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bojana Ilic</title>
+    <title>Bojana Ilic Challenge 19</title>
     <link rel="stylesheet" href="CSS/style.css" type="text/css">
 </head>
 <body>
@@ -10,11 +10,11 @@
             <img src="Images/Logo.png" width="50px" height="40px">
         </div>
         <nav class="inline-block">
-            <ul class="topmenu">
-                <li class="inline-block">About</li>
-                <li class="inline-block">Skills</li>
-                <li class="inline-block">Work</li>
-                <li class="inline-block">Contact</li>
+            <ul>
+                <li class="inline-block" id="about"><a href="#About">About</a></li>
+                <li class="inline-block" id="skills"><a href="#Skills">Skills</a></li>
+                <li class="inline-block" id="work"><a href="#Work">Work</a></li>
+                <li class="inline-block" id="contact"><a href="#Contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -91,4 +91,9 @@
 
 
 </body>
+
+<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+<script src="/path/to/jquery.jqZoom.js"></script>
+<script src="JS\index.js"></script>
+
 </html>
