--- a/index.html
+++ b/index.html
@@ -87,6 +87,16 @@
         <li class="inline-block">Work</li>
         <li class="inline-block">Contact</li>
     </ul>
+
+    <div class="footerIcons">
+        <img src= "Images/Facebook.png" style="width:40px">
+        <img src= "Images/Instagram.png" style="width:40px">
+        <img src= "Images/E-mail.png" style="width:40px">
+    </div>
+</div>
+<p class="copyrightText">Copyright, Bojana Ilic 2024</p>
+
+
   </footer>
 
 
